# mimerApp

./: README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mim/database/: sqliter.java
app/src/main/java/com/mim/mimer/: Constant.java  Utils.java
app/src/main/java/libmimer/: MimCore.cpp  MimCore.h  android_build.bat  android_build.sh  client.cpp  com_mim_mimer_sender_Sender.h  mimer.cpp  ndkUtils.cpp
app/src/main/java/libmimer/core/: Stream.cpp  Stream.h  log_android.h  platform.h
app/src/main/java/libmimer/core/MIMProtocol/: CMakeLists.txt  List.cpp  List.h  MIMErr.h  MIMInt.cpp  MIMInt.h  MIMPacket.cpp  MIMPacket.h  MIMProtocol.cpp  MIMProtocol.h  README.md  comdefine.h  log_android.h  memUtil.c  memUtil.h  timeUtil.c  timeUtil.h
app/src/main/java/libmimer/core/MIMProtocol/jni/: Android.mk
app/src/main/java/libmimer/core/ellog/: ellog.cpp  (+2 more)
app/src/main/java/libmimer/jni/: Android.mk
app/src/main/java/libmimer/mimcore/: MimCore.cpp  MimCore.h  log_android.h  mimer.cpp
app/src/main/java/libmimer/sqliter/: log_android.h  sqliter.cpp
app/src/main/java/libmimer/utils/: ndkUtils.cpp  ndkUtils.h
app/src/main/res/drawable/: avatar_shape.xml  button_shape.xml  item_background_select.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_msg.xml  chat_page.xml  contact_page.xml  item_chlid.xml  loginer.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+49 files in other folders)
